# NL2PyFlow

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
backend/blocks/: block_1.py  block_2.py  block_3.py
blocks/: block_1.py  block_2.py  block_3.py
core/: block_parser.py
examples/: basic_pipeline.txt
frontend/scripts/: App.js
frontend/scripts/components/: TextEditor.js
llm/: llm_handler.py
tests/: test_block_parser.py  test_code_generator.py  test_orchestrator.py
